# inference

./: .gitignore  README.md  pyproject.toml
src/inference/: __init__.py  embed.py  filter.py  formatting.py  generate.py  io.py  vocab_mask.py
src/inference/chat/: cli.py
src/inference/scripts/: build_vocab_mask.py  embed.py  filter.py  generate.py
